fix resolution and layout problems

--- a/style.css
+++ b/style.css
@@ -2,11 +2,13 @@ body {
     display: flex;
     align-items: center;
     flex-direction: column;
-}
+    background-color: rgb(248, 242, 204);
+ 
 
+}
 .title {
-    font-size: 80px;
-    margin-top: 100px;
+    font-size: 40px;
+    margin-top: 50px;
     font-weight: bold;
 
 }
@@ -19,18 +21,21 @@ body {
 
 #Reset {
 padding: 15px;
-margin: 100px;
-font-size: 40px;
+margin: 80px;
+margin-top: 40px;
+font-size: 30px;
 font-weight: bold;
 border: 7px solid black;
 border-radius: 10px;
 }
 
 .box1, .box2, .box3 {
-    margin: 100px;
+    margin: 10px;
     margin-bottom: 10px;
     display: flex;
     flex-direction: column;
+    align-items: center;
+   
 }
 
 img {
@@ -38,14 +43,42 @@ img {
     margin-bottom: 50px;
 }
 
-#Rock, #Paper, #Scissor {
+#Rock {
 padding: 15px;
-margin: 100px;
-font-size: 40px;
+padding-left: 31px;
+padding-right: 31px;
+margin: 80px;
+font-size: 30px;
 font-weight: bold;
 border: 7px solid black;
 border-radius: 10px;
+margin-top: 40px;
+margin-bottom: 40px;
 }
+
+#Paper {
+    padding: 15px;
+    padding-left: 26px;
+    padding-right: 26px;
+    margin: 80px;
+    font-size: 30px;
+    font-weight: bold;
+    border: 7px solid black;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    }
+
+#Scissor {
+    padding: 15px;
+    margin: 80px;
+    font-size: 30px;
+    font-weight: bold;
+    border: 7px solid black;
+    border-radius: 10px;
+    margin-top: 40px;
+    margin-bottom: 40px;
+    }
 
 #Rock:hover, #Paper:hover, #Scissor:hover {
     background-color: #45a049;
@@ -55,13 +88,13 @@ border-radius: 10px;
     background-color: red;
 }
 .new {
-    font-size: 50px;
+    font-size: 30px;
     padding: 0px;
 }
 
 #scoresText, #winner, #scores, #finalWinnerText {
     margin: 10px;
-    font-size: 100px;
+    font-size: 30px;
 }
 
 #winner, #finalWinnerText {
@@ -69,6 +102,7 @@ border-radius: 10px;
 }
 
 #bestOfFive {
-    font-size: 80px;
+    font-size: 40px;
     font-weight: bold;
+    text-align: center;
 }
